# ChangeLog for gnustep-apps/aclock
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/gnustep-apps/cvs-repo/gentoo-x86/gnustep-apps/aclock/ChangeLog,v 1.14 2009/04/07 14:01:34 voyageur Exp $

*aclock-0.3 (07 Apr 2009)

  07 Apr 2009; Bernard Cafarelli <voyageur@gentoo.org> +aclock-0.3.ebuild:
  Version bump, update license and homepage

  16 Nov 2007; Steve Dibb <beandog@gentoo.org> aclock-0.2.3-r1.ebuild:
  amd64 stable, bug 195990

  08 Nov 2007; Bernard Cafarelli <voyageur@gentoo.org>
  -files/config-aclock.sh, -aclock-0.2.3.ebuild:
  Remove old version

  27 Oct 2007; nixnut <nixnut@gentoo.org> aclock-0.2.3-r1.ebuild:
  Stable on ppc wrt bug 195990

  17 Oct 2007; Christian Faulhammer <opfer@gentoo.org>
  aclock-0.2.3-r1.ebuild:
  stable x86, bug 195990

*aclock-0.2.3-r1 (10 Sep 2007)

  10 Sep 2007; Bernard Cafarelli <voyageur@gentoo.org>
  +aclock-0.2.3-r1.ebuild:
  Version bump from the GNUstep overlay

  18 Aug 2007; Christoph Mende <angelos@gentoo.org> aclock-0.2.3.ebuild:
  Added ~amd64 wrt bug #170433

  06 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  15 Apr 2005; Armando Di Cianno <fafhrd@gentoo.org> -aclock-0.1.0.ebuild,
  -aclock-0.2.ebuild, -aclock-0.2-r1.ebuild, aclock-0.2.3.ebuild:
  Stabilized 0.2.3; pruned out old ebuilds

*aclock-0.2.3 (13 Dec 2004)

  13 Dec 2004; Armando Di Cianno <fafhrd@gentoo.org> +aclock-0.2.3.ebuild:
  Version bump

*aclock-0.2-r1 (11 Nov 2004)

  11 Nov 2004; Armando Di Cianno <fafhrd@gentoo.org> aclock-0.1.0.ebuild,
  +aclock-0.2-r1.ebuild:
  Mass Update: gnustep.eclass revamped to allow configurable root install;
  gnustep-base/libs/apps updated to utilize new gnustep.eclass (only versions
  bumped where files would change); some KEYWORDS were accidentally dropped
  between version bumps of packages -- this has been resolved; windowmaker
  correctly supports gnustep now
