@@ -1,6 +1,18 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+DIST AClock-0.4.0.tar.gz 299488 RMD160 32fc4e8329fc169dc7ca27d1573573f18b65b7b2 SHA1 c1d4b6d172a0277fba540c73aa454b22d3b2a413 SHA256 7c85c4e957f1e2452f6ed2893abd2771b34c5fa62b9460fa3895b0678eafaad0
 DIST aclock-0.2.3.tar.gz 32656 RMD160 daab04484b457b7c9fa392e75a6e6a56c8ff6d06 SHA1 159c3eeae9b24947349725c0a25d22cd555a417f SHA256 a544ec48eee46ba600b6443bc93fa9b54ea933df64c6dfa28fdae0f3acd5f999
 DIST aclock-0.3.tar.gz 38484 RMD160 4c677f0865a4f6071c6866cd52adfdcf710769ef SHA1 93db52bb493ac4ded17c71b4bd7bbf395fbd3efb SHA256 dec82c4ccb0e9b90e2f83294cecd0e1b531c0af3d3f5f2fa0d04abef72ac0757
 EBUILD aclock-0.2.3-r1.ebuild 658 RMD160 aef5be1da6f81e9733fcbbb445c7666f43aac52f SHA1 1aaf54203ab6cc4bb4e49cc9ced7a1624d02f3ac SHA256 d8ecff74fe7676df71f3faeac336d19c95abe1571ab55f8a555d9e21b815ece1
 EBUILD aclock-0.3.ebuild 681 RMD160 c371414b9b15478f991443f6a57f417deb08700c SHA1 4fb45e413d0c1d10754e1da48fd800a20b3d6409 SHA256 d5bdf445eaaaee322a3b4e81debb8e1080f677712cda85bd22598c25390ebb6b
-MISC ChangeLog 2461 RMD160 282374734b3cbda8d3581f1671d873f710498a7d SHA1 c719ae21f0def26f4551fd59195bc73a3c38a8c9 SHA256 9cbf452622814a782b45985870d478e6e7fcd2fa6da87cbb5c657c05f29d8131
+EBUILD aclock-0.4.0.ebuild 718 RMD160 05151e4a5b2e52e654ff4330ceff78264f2953dd SHA1 2c9e695ff32b3ae41b4bbd0cd8e500916c669de4 SHA256 af0e653b3e6ad3cee2423a4383be19980653a377824f834ebc011908eb6de99c
+MISC ChangeLog 2607 RMD160 99ba7cf0af0fe1cf2d98c053961d51ee07e0e331 SHA1 bcd2e8e65da552c8bcd5811e2432936ae8aa6583 SHA256 c24a4681ade9758929d2ff3a0bbb10ccbbb7584d0569a4890551d848c85003ca
 MISC metadata.xml 409 RMD160 6a47130fd9171a2411611c0c3ac974407e49457e SHA1 f34cf9fe3fe0e6c8c5833a66b6cb14a3b9d9d880 SHA256 10434aa27ce5882eaba06b1e1daaf291694270e4e01307b6912c55f41469fdcb
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.18 (GNU/Linux)
+
+iF4EAREIAAYFAk60A6wACgkQFYEBGcdFJfKYywD/d35qi9mkbKfewC41/rxGgZdm
+Tv9Z3HoKrWp65JwlsosA/3DBCQp0rqK/o+x2JcTPeprWrx/0VSdj+NPrk+OR7HPh
+=nYIp
+-----END PGP SIGNATURE-----
