@@ -1,6 +1,11 @@
 # ChangeLog for gnustep-apps/aclock
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnustep-apps/cvs-repo/gentoo-x86/gnustep-apps/aclock/ChangeLog,v 1.14 2009/04/07 14:01:34 voyageur Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/gnustep-apps/cvs-repo/gentoo-x86/gnustep-apps/aclock/ChangeLog,v 1.15 2011/11/04 15:24:16 voyageur Exp $
+
+*aclock-0.4.0 (04 Nov 2011)
+
+  04 Nov 2011; Bernard Cafarelli <voyageur@gentoo.org> +aclock-0.4.0.ebuild:
+  Version bump, update homepage to GAP
 
 *aclock-0.3 (07 Apr 2009)
 
